--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class="ads">
             <h2>Ads</h2>
           </div>
-          <div class="footer"><h2>footer</h2></div>
-          <div class="blank4"></div>
+          <div class="footer"></div>
+          <div class="blank4"><h2>footer</h2></div>
         </div>
       </div>
     </div>
